WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254897
[Cocoa] font-variation-settings:opsz is not applied when text-rendering:optimizeLegibility is set
https://bugs.webkit.org/show_bug.cgi?id=254897
Summary
[Cocoa] font-variation-settings:opsz is not applied when text-rendering:optim...
Myles C. Maxfield
Reported
2023-04-02 19:03:51 PDT
[Cocoa] font-variation-settings:opsz is not applied when text-rendering:optimizeLegibility is set
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2023-04-02 19:03:56 PDT
<
rdar://problem/106814619
>
Myles C. Maxfield
Comment 2
2023-04-02 19:07:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12301
EWS
Comment 3
2023-04-11 11:20:39 PDT
Committed
262831@main
(8bbfbb1f0689): <
https://commits.webkit.org/262831@main
> Reviewed commits have been landed. Closing PR #12301 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug